# internal/api/get_user_segments_handler.go
@@ -13,10 +13,11 @@ import (
 )
 
 type UserSegmentsResponse struct {
-	UserSegments []string `json:"userSegments"`
+	UserId   int      `json:"userId"`
+	Segments []string `json:"segments"`
 }
 
-// GetReportSegments
+// GetUserSegments GetReportSegments
 // @Summary GetUserSegments
 // @Tags User
 // @Description Allows you to get data on segments of some user
@@ -32,15 +33,18 @@ func (h *handler) GetUserSegments(c *gin.Context) {
 		response.WriteErrorResponse(c, app_err.NewBusinessError("invalid userId parameter"))
 		return
 	}
-
+	if userId < 1 {
+		response.WriteErrorResponse(c, app_err.NewBusinessError(ErrInvalidUserId))
+	}
 	ctx := context.Background()
-	userSegments, err := h.service.GetActiveUserSegments(ctx, userId)
+	userSegments, err := h.userService.GetActiveUserSegments(ctx, userId)
 	if err != nil {
 		response.WriteErrorResponse(c, err)
 		return
 	}
 
 	c.JSON(http.StatusOK, UserSegmentsResponse{
-		UserSegments: userSegments,
+		UserId:   userId,
+		Segments: userSegments,
 	})
 }
